<resources>
    <string name="app_name">LoginDemo</string>
    <string name="companyname">Company Name</string>
    <string name="username">Email Address</string>
    <string name="pass">Password</string>
    <string name="Login">Login</string>
    <string name="Logout">Log Out</string>
    <string name="register">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="email">Email Id</string>
    <string name="repwd">Re-Enter Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="back">Already have an account?</string>
    <string name="Welcome">Welcome</string>
    <string name="copyright">2016 Copyright</string>


</resources>
